--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
     <h1> Attributo in html ... comando che aggiunge informazioni al tag</h1>
     <img src=""/>
     <a href=""> ancora di salvataggio ... h hypertext reference </a>
-    <span style=""> intervallo : fratello gemello del DIV che non va a capo</span>
+    <span style="color: aqua;"> intervallo : fratello gemello del DIV che non va a capo</span>
 </body>
 </html>
