--- a/web/tabelle/index.html
+++ b/web/tabelle/index.html
@@ -9,6 +9,8 @@
 <body>
     <img src="top.jpg" class="top-image">
     <p class="center-text">| HOME | LA NOSTRA AZIENDA | I PRODOTTI | I SERVIZI | CARELLO | CONTATTI |</p>
+    <img src="top.jpg" width="100%">
+    <p align="center">| HOME | LA NOSTRA AZIENDA | I PRODOTTI | I SERVIZI | CARELLO | CONTATTI |</p>
     <div class="image-container">
         <div class="left-images">
             <img src="registrati-ora.jpg">
@@ -40,4 +42,3 @@
         </div>
     </div>
 </body>
-</html>
